# ipa-shiken-fetcher

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflow/: ghcr.yml
.github/workflows/: ghcr.yml
src/: main.rs
testdata/: home.html
