[package]
name = "ipa-shiken-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
